start studying algorithms and data structure.

--- a/server/index.html
+++ b/server/index.html
@@ -1,8 +1,16 @@
 <html>
     <body>
 
-        Hello!World!
-        Good Boy><
-        So What???
+        Hello!HTML!! <br>
+
+        <script type="text/javascript">
+
+        <!--
+        alert("Hello!JavaScript!!");
+        // -->
+
+        </script>
+
+        <a href="Button.html">ButtonPage</a>
     </body>
 </html>
